# adventofcode-20

./: adventofcode.cabal
.devcontainer/: Dockerfile  devcontainer.json
day1/: README.md  day1.hs
day10/: day10.hs
day11/: day11.hs
day2/: README.md  day2.hs
day3/: README.md  day3.hs
day4/: README.md  day4.hs
day5/: README.md  day5.hs
day6/: README.md  day6.hs
day7/: day7.hs
day8/: day8.hs
day9/: day9.hs
