name:              adventofcode
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2


executable day1
  main-is:         day1.hs
  hs-source-dirs:  day1
  build-depends:   base, split

executable day2 
  main-is:          day2.hs
  hs-source-dirs:   day2 
  build-depends:    base, split, HUnit

Test-Suite day2-test
  type:             exitcode-stdio-1.0
  main-is:          day2-test.hs
  hs-source-dirs:   day2 
  build-depends:    base, split, HUnit