name:              adventofcode
version:           1.0   
Build-Type:        Simple
cabal-version:     >= 1.2


executable day1
  main-is:         day1.hs
  hs-source-dirs:  day1
  build-depends:   base, split

executable day2 
  main-is:          day2.hs
  hs-source-dirs:   day2 ss 
  build-depends:    base, split

executable day3
  main-is:          day3.hs  
  hs-source-dirs:   day3
  build-depends:    base, split, vector

executable day4
  main-is:          day4.hs  
  hs-source-dirs:   day4
  build-depends:    base, split, parsec
