name:              adventofcode
version:           1.0   
Build-Type:        Simple
cabal-version:     >= 1.2

--| TODO remove unnecesary deps
executable day1
  main-is:         day1.hs
  hs-source-dirs:  day1
  build-depends:   base

executable day2 
  main-is:          day2.hs
  hs-source-dirs:   day2 ss 
  build-depends:    base

executable day3
  main-is:          day3.hs  
  hs-source-dirs:   day3
  build-depends:    base, vector 

executable day4
  main-is:          day4.hs  
  hs-source-dirs:   day4
  build-depends:    base, split, parsec

executable day5
  main-is:          day5.hs  
  hs-source-dirs:   day5
  build-depends:    base, sort

executable day6
  main-is:          day6.hs  
  hs-source-dirs:   day6
  build-depends:    base, split

